[package]
name = "frontend"
version = "0.1.0"
authors = ["Rajat Verma <rajat98v@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type= ["cdylib", "rlib"]

[dependencies]
yew = "*"

serde = "*"
serde_derive = "*"
wasm-bindgen = "*"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Document",
  "Element",
  "Node",
  "Window",
]

